--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://nishanshashintha1996.github.io/news-vue/",
   "name": "news-app",
   "description": "News App using World News API",
   "version": "1.0.0",
@@ -7,9 +8,12 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "vue": "^2.5.11"
   },
   "browserslist": [
